tests/semantica/invalid/declaracion/test5.ctds
program 
    {
        integer foo(){
            return 2;
        }

        void main(){
            bool x = foo();

            return;
        }
    }